--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,54 +1,86 @@
-html, body {
+/*!
+ * File Name 	: styles.css
+ * Name 		: Main CSS for MINIM0
+ * Author 		: Ronald Tolentino
+*/
+
+html,
+body {
 	width: 100%;
 	height: 100%;
 	overflow-x: hidden;
 	font-family: 'Playfair Display', serif;
 	padding: 0;
-	margin:0;
+	margin: 0;
 	color: #000;
 	font-size: 14px;
 }
-table, thead, tbody, tr, td, p, h1, h2, h3, h4, h5, h6, input, textarea, hr, object {
+
+table,
+thead,
+tbody,
+tr,
+td,
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+input,
+textarea,
+hr,
+object {
 	margin: 0;
 	padding: 0;
 	line-height: normal;
 	font-size: 100%;
 	font-family: inherit;
 }
+
 a {
 	text-decoration: none;
 }
+
 h5 {
 	font-family: 'Ubuntu', sans-serif;
 }
 
 .wrapper {
 	width: 90%;
-    margin: 0 auto;
+	margin: 0 auto;
 }
+
 #logo {
 	display: inline-block;
 }
+
 #navigation {
 	margin: 70px 0;
 }
+
 #navigation ul {
 	float: right;
 	padding: 0;
 	margin: 0;
 }
+
 #navigation ul li {
 	list-style: none;
 	display: inline-block;
 	margin-right: 95px;
 }
+
 #navigation ul li:last-child {
 	margin-right: unset;
 }
+
 #navigation ul li a {
-	color:#626262;
+	color: #626262;
 	text-transform: uppercase;
 }
+
 #banner {
 	margin-bottom: 95px;
 }
@@ -56,155 +88,190 @@ h5 {
 footer {
 	display: flex;
 	height: 100px;
-	background:#f0f0f0;
+	background: #f0f0f0;
 	align-items: center;
 }
+
 #footer-nav {
 	float: left;
 }
+
 #footer-nav a {
-	color:#000;
+	color: #000;
 	margin-right: 15px;
 }
+
 #social-media {
 	float: right;
 	padding: 0;
 	margin: 0;
 }
+
 #social-media li {
 	list-style: none;
 	display: inline-block;
 	margin-right: 15px;
 }
-#social-media > span {
+
+#social-media>span {
 	display: inline-block;
 	margin-right: 20px;
 }
+
 #content {
 	margin-top: 0;
 	margin-bottom: 120px;
 }
+
 #content .wrapper article {
 	width: 65%;
-	float:left;
+	float: left;
 }
+
 #content .wrapper aside {
 	width: 35%;
-	float:left;
+	float: left;
 }
+
 .about-the-author {
 	padding-left: 35px;
 }
-.bio img { width: 100%; margin-bottom: 30px; }
+
+.bio img {
+	width: 100%;
+	margin-bottom: 30px;
+}
+
 .bio h3 {
 	font-size: 24px;
-	color:#626262;
+	color: #626262;
 	margin-bottom: 20px;
 }
+
 .bio p {
 	font-size: 12px;
-	color:#626262;
+	color: #626262;
 	margin-bottom: 20px;
 	line-height: 20px;
 }
+
 .icons {
 	margin-bottom: 75px;
 }
+
 .icons ul {
 	padding: 0;
 	margin: 0;
 }
+
 .icons ul li {
 	list-style: none;
 	display: inline-block;
 	margin-right: 15px;
 }
+
 .top-post ul {
 	padding-left: 20px;
 	margin: 0;
 }
+
 .top-post ul li {
 	margin-bottom: 30px;
 	color: #b4ad9e;
 }
+
 .top-post ul li h3 {
-	color:#626262;
+	color: #626262;
 	font-size: 16px;
 	margin-bottom: 15px;
 }
+
 .top-post ul li p {
 	font-family: 'Ubuntu', sans-serif;
-	color:#b4ad9e;
+	color: #b4ad9e;
 	font-size: 15px;
 	text-transform: uppercase;
 }
+
 .items {
 	padding-left: 80px;
 }
+
 .items h5 {
 	font-family: 'Ubuntu', sans-serif;
-	color:#b4ad9e;
+	color: #b4ad9e;
 	font-size: 14px;
 	text-transform: uppercase;
 	margin-bottom: 25px;
 }
+
 .items h1 {
-	color:#626262;
+	color: #626262;
 	font-size: 30px;
 	margin-bottom: 25px;
 }
+
 .items p {
-	color:#626262;
+	color: #626262;
 	line-height: 24px;
 }
+
 .photo-list {
 	padding: 0;
 	margin: 0;
 }
+
 .photo-list li {
 	list-style: none;
 	margin-bottom: 50px;
 }
+
 blockquote {
 	margin: 0 25px 25px;
 	font-style: italic;
-	color:#626262;
+	color: #626262;
 	font-size: 14px;
 	line-height: 24px;
 }
+
 .social-share {
 	margin-top: 75px;
-    float: right;
+	float: right;
 }
+
 .social-share ul {
 	padding: 0;
 	margin: 0;
 }
+
 .social-share ul li {
 	list-style: none;
 	display: inline-block;
 	margin-right: 15px;
 }
+
 .social-share ul span {
 	font-family: 'Ubuntu', sans-serif;
-	color:#b4ad9e;
+	color: #b4ad9e;
 	font-size: 13px;
 	text-transform: uppercase;
 	margin-right: 20px;
 }
 
 #you-may-also-like {
-	background: rgba(242,242,242,0.8); 
+	background: rgba(242, 242, 242, 0.8);
 	padding: 70px 0;
 }
+
 #you-may-also-like article {
-    margin-left: 80px;
+	margin-left: 80px;
 }
 
 #you-may-also-like ul {
 	padding: 0;
 	margin: 0;
 }
+
 #you-may-also-like ul li {
 	list-style: none;
 	display: inline-block;
@@ -215,45 +282,54 @@ blockquote {
 }
 
 #you-may-also-like ul li div {
-    padding-right: 40px;
+	padding-right: 40px;
 }
 
 #you-may-also-like ul li div img {
 	width: 100%;
 }
+
 #you-may-also-like ul li div h2 {
 	font-size: 20px;
 	color: #626262;
-	margin-top:20px;
+	margin-top: 20px;
 }
+
 .section-title {
 	font-family: 'Ubuntu', sans-serif;
-	color:#b4ad9e;
+	color: #b4ad9e;
 	font-size: 14px;
 	text-transform: uppercase;
 	margin-bottom: 40px;
 }
+
 #comments {
 	padding: 60px 0;
 }
+
 .wrapper .add-margin-left {
 	margin-left: 80px;
 }
+
 .wrapper .add-margin-right {
 	margin-right: 40px;
 }
+
 #comments-items {
 	padding: 0;
 	margin: 0;
 }
+
 #comments-items li {
 	display: block;
 	list-style: none;
 	margin-bottom: 60px;
 }
+
 #comments-items li:last-child {
 	margin-bottom: unset;
 }
+
 #comments-items li a {
 	margin-right: 35px;
 	margin-bottom: 35px;
@@ -262,72 +338,89 @@ blockquote {
 	overflow: hidden;
 	border-radius: 50%;
 }
+
 #comments-items li img {
 	width: 100%;
 	border-radius: 50%;
 }
+
 .item-left {
 	display: inline-block;
 	float: left;
 }
-.no-img  {
+
+.no-img {
 	font-family: 'Ubuntu', sans-serif;
-	color:#fff;
+	color: #fff;
 	font-size: 34px;
 	text-transform: uppercase;
 	text-align: center;
 	line-height: 68px;
 }
-.green-color{
-	background:#cae5e0;
+
+.green-color {
+	background: #cae5e0;
 }
+
 .gray-color {
-	background:#ededea;
+	background: #ededea;
 }
+
 .comment-info h2 {
 	font-size: 14px;
 	font-weight: bold;
 	color: #626262;
 	margin-bottom: 15px;
 }
+
 .comment-info p {
-	color:#656565;
+	color: #656565;
 	margin-bottom: 15px;
 }
+
 .reply-btn {
 	font-family: 'Ubuntu', sans-serif;
 	text-transform: uppercase;
-	color:#b4ad9e;
+	color: #b4ad9e;
 	font-size: 14px;
 }
+
 form {
 	width: calc(100% - 107px);
-	float: left;	
+	float: left;
 }
+
 form input {
 	border: 1px solid #c8c8c8;
-
 	padding-left: 5%;
-    padding-bottom: 25px;
-    padding-top: 25px;
-    padding-right: 35%;
-
+	padding-bottom: 25px;
+	padding-top: 25px;
+	padding-right: 35%;
 	border-radius: 6px;
 	width: 60%;
 }
-.connectedwith { float: right; }
+
+.connectedwith {
+	float: right;
+}
+
 .connectedwith ul span {
 	margin-right: 35px;
 }
+
 .connectedwith ul li {
 	list-style: none;
 	display: inline-block;
 	margin-right: 15px;
 }
+
+
 /* Utils */
+
 .clearfix {
 	clear: both;
 }
+
 .responsive-img {
 	width: 100%;
 	height: auto;
